{
    "name": "TouchActions",
    "maps": [
        {
            "name": "Touch",
            "id": "2174474f-d2da-4648-ad85-093f6e612f6d",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "f3f0b5e5-7dec-47ac-8eca-8a6050102ce9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c3b6f188-d677-480f-90cd-d9755f07d70c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "e3936c6b-47c0-4a7b-9e84-758f5c324fb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f01a20aa-cf39-4499-ae39-c9089b2b39bc",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79eb7ab4-ecb2-4843-9511-298d74c7ce68",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f6861b9-302d-48db-97e8-a1ae0ddf4405",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}